# servicetest

./: .gitattributes  .gitignore  .markdownlint.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  server.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml
DDL/: createtable.sql
src/chinook_service/: __init__.py  __main__.py  server.py
tests/: test_server.py
