[project]
name = "chinook-service"
version = "0.1.0"
description = "Flask REST API for the Chinook sample database"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Flask>=2.3.3,<3.0",
    "Flask-RESTful>=0.3.10,<0.4",
    "SQLAlchemy>=2.0.36,<3.0",
    "yahoo_fin>=0.8.9.1,<0.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0,<9.0",
    "pytest-cov>=5.0.0,<6.0",
]
